--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
+    "@mr_chick/vue_laravel_echo": "^1.0.10",
     "bootstrap": "^4.6.0",
     "chokidar": "^3.5.1",
     "sortablejs": "^1.13.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
     "vue-click-outside": "^1.1.0",
+    "vue-echo-laravel": "^0.1.0",
     "vue-multiselect": "^2.1.6",
+    "vue-pusher": "^1.1.0",
     "vue-recaptcha": "^1.3.0",
     "vue-router": "^3.0.1",
     "vue-spinners": "^1.0.2",
@@ -71,6 +74,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
+    "laravel-echo": "^1.11.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -79,6 +83,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "pusher-js": "^7.0.3",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
