--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mr_chick/vue_laravel_echo": "^1.0.10",
     "bootstrap": "^4.6.0",
     "chokidar": "^3.5.1",
+    "laravel-vue-pagination": "^2.3.1",
     "sortablejs": "^1.13.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.12",
