--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Sergey98Am <serg98barca@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
@@ -14,32 +14,33 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@casl/ability": "^5.2.2",
-    "@casl/vue": "^1.2.2",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@casl/ability": "^5.4.3",
+    "@casl/vue": "^1.2.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
-    "@mr_chick/vue_laravel_echo": "^1.0.10",
     "bootstrap": "^4.6.0",
-    "chokidar": "^3.5.1",
+    "chokidar": "^3.5.2",
+    "javascript-time-ago": "^2.3.8",
     "laravel-vue-pagination": "^2.3.1",
-    "sortablejs": "^1.13.0",
+    "sockjs": "^0.3.21",
+    "sortablejs": "^1.14.0",
     "vee-validate": "^2.2.15",
-    "vue": "^2.6.12",
+    "vue": "^2.6.14",
     "vue-click-outside": "^1.1.0",
-    "vue-echo-laravel": "^0.1.0",
     "vue-multiselect": "^2.1.6",
     "vue-pusher": "^1.1.0",
     "vue-recaptcha": "^1.3.0",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.5.2",
     "vue-spinners": "^1.0.2",
+    "vue-timeago": "^5.1.3",
     "vuedraggable": "^2.24.3",
     "vuejs-paginate": "^2.1.0",
-    "vuex": "^3.5.1",
+    "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "autoprefixer": "^7.1.2",
     "axios": "^0.21.1",
     "babel-core": "^6.22.1",
@@ -64,7 +65,7 @@
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -75,9 +76,9 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
-    "laravel-echo": "^1.11.0",
+    "laravel-echo": "^1.11.1",
     "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
+    "node-notifier": "^5.4.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -94,10 +95,11 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.7.3",
     "vue-style-loader": "^3.1.2",
-    "vue-template-compiler": "^2.6.12",
+    "vue-template-compiler": "^2.6.14",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
